deploy/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: vkube
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: vkube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: vkube-backend
      containers:
        - name: backend
          image: ghcr.io/weemarins/vkube-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
