deploy/backend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend
  namespace: vkube
spec:
  to:
    kind: Service
    name: backend
  port:
    targetPort: 8080
  tls:
    termination: edge
